--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ author_email = falktx@falktx.com
 maintainer = Christopher Arndt
 maintainer_email = chris@chrisarndt.de
 license = GPLv2+
+license_file = COPYING
 long_description = file: README.md
 long_description_content_type = etxt/markdown
 url = https://github.com/jackaudio/pyjacklib
