--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ maintainer_email = chris@chrisarndt.de
 license = GPLv2+
 license_file = COPYING
 long_description = file: README.md
-long_description_content_type = etxt/markdown
+long_description_content_type = text/markdown
 url = https://github.com/jackaudio/pyjacklib
 keywords =
     audio
