--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ maintainer = Christopher Arndt
 maintainer_email = chris@chrisarndt.de
 license = GPLv2+
 license_file = COPYING
-long_description = file: README.md
+long_description = file: README.md, file: CHANGELOG.md
 long_description_content_type = text/markdown
 url = https://github.com/jackaudio/pyjacklib
 keywords =
