--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = falktx@falktx.com
 maintainer = Christopher Arndt
 maintainer_email = chris@chrisarndt.de
 license = GPLv2+
-license_file = COPYING
+license_file = COPYING.md
 long_description = file: README.md, file: CHANGELOG.md
 long_description_content_type = text/markdown
 url = https://github.com/jackaudio/pyjacklib
