build: add black and isort tools configuration
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,12 @@ requires = [
 ]
 build-backend = "setuptools.build_meta"
 
+[tool.black]
+line-length = 100
+#extend-exclude = '''
+#    ^/src/foo.py
+#'''
+
+[tool.isort]
+profile = "black"
+line_length = 100
