feat: add missing wrapper for 'jack_port_rename'
Signed-off-by: Christopher Arndt <chris@chrisarndt.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,8 @@ line-length = 100
 [tool.isort]
 profile = "black"
 line_length = 100
+
+[tool.pytest.ini_options]
+markers = [
+    "jack_server_required: a running JACK server is required",
+]
